--- a/WebApi/appsettings.Development.json
+++ b/WebApi/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=localhost;User=sa;Password=S3cur3P@ssW0rd!;"
+    "Default": "Server=localhost;Database=WeatherWebApi;User=sa;Password=S3cur3P@ssW0rd!;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
