added azure key store integration

--- a/WebApi/appsettings.Release.json
+++ b/WebApi/appsettings.Release.json
@@ -1,4 +1,8 @@
 {
+  "KeyVault": {
+    "VaultUri": "https://swa.vault.azure.net/",
+    "SecretName":"HYSAzureCourseDBConnectionString"
+  },
   "ConnectionStrings": {
     "Default": "Server=localhost;Database=WeatherWebApi;User=sa;Password=S3cur3P@ssW0rd!;TrustServerCertificate=True;"
   },
