--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "KeyVault": {
+    "VaultUri": "https://swa.vault.azure.net/",
+    "SecretName": "HYSAzureCourseDBConnectionString"
+  },
   "https_port": 443,
   "Logging": {
     "LogLevel": {
